# S4_MCC

./: .env.example  .gitignore  .mcp.json  README.md  anti-patterns.md  architecture.md  main.py  pyproject.toml  quiz.md
src/scenario_4_dev_productivity/: __init__.py  config.py
src/scenario_4_dev_productivity/agents/: __init__.py  automate_agent.py  base.py  coordinator_agent.py  explore_agent.py  generate_agent.py
src/scenario_4_dev_productivity/api/: __init__.py  client.py
src/scenario_4_dev_productivity/context/: __init__.py  compact.py  hooks.py  scratchpad.py
src/scenario_4_dev_productivity/loop/: __init__.py  engine.py
src/scenario_4_dev_productivity/mcp/: __init__.py  discovery.py  loader.py
src/scenario_4_dev_productivity/models/: __init__.py  api.py  messages.py  tools.py
src/scenario_4_dev_productivity/pipeline/: __init__.py  cli.py  multi_pass.py  runner.py
tests/: test_placeholder.py
tests/test_agents/: __init__.py  test_automate.py  test_base.py  test_coordinator.py  test_explore.py  test_generate.py
tests/test_api/: __init__.py  test_client.py
tests/test_integration/: __init__.py  conftest.py  test_context.py  test_error_scenarios.py  test_full_workflow.py  test_pipeline.py
tests/test_loop/: __init__.py  test_engine.py
tests/test_mcp/: __init__.py  test_discovery.py  test_loader.py
tests/test_models/: __init__.py  test_api.py  test_messages.py  test_tools.py
tests/test_tools/: __init__.py  test_bash.py  test_edit.py  test_glob.py  test_grep.py  test_read.py  test_registry.py  test_write.py
(+14 files in other folders)
